--- a/index.html
+++ b/index.html
@@ -1,267 +1,155 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>LSM RAKYAT MENANTI KEADILAN (RMK)</title>
-  <link rel="stylesheet" href="style.css" />
-  <style>
-    body {font-family: 'Poppins', sans-serif; margin:0; line-height:1.6; color:#333;}
-    .wrap {max-width:1100px; margin:0 auto; padding:0 20px;}
-
-    /* HERO */
-    .hero {background:#e9f9f3; padding:60px 20px; text-align:center;}
-    .hero h2 {font-size:28px; margin-bottom:10px;}
-    .lead {font-size:18px; margin-bottom:20px;}
-    .btn {display:inline-block; padding:10px 18px; border-radius:8px; background:#0a8547; color:#fff; text-decoration:none; font-weight:600; transition:.2s;}
-    .btn:hover {background:#076c3a;}
-    .btn-outline {background:#fff; color:#0a8547; border:2px solid #0a8547;}
-    .btn-outline:hover {background:#0a8547; color:#fff;}
-
-    /* SECTIONS */
-    .section {padding:60px 20px;}
-    .section.alt {background:#f9f9f9;}
-    h2 {text-align:center; margin-bottom:30px; color:#0a8547;}
-    .card {background:#fff; border-radius:12px; padding:20px; box-shadow:0 2px 8px rgba(0,0,0,0.08); margin-bottom:20px;}
-
-    /* GRID */
-    .grid-3, .grid-4 {display:grid; gap:20px;}
-    .grid-3 {grid-template-columns:repeat(auto-fit,minmax(250px,1fr));}
-    .grid-4 {grid-template-columns:repeat(auto-fit,minmax(200px,1fr));}
-    .member img {width:100%; border-radius:10px; margin-bottom:10px;}
-
-    /* TABLE */
-    table {width:100%; border-collapse:collapse;}
-    th,td {padding:10px; border-bottom:1px solid #ddd;}
-    th {background:#0a8547; color:#fff;}
-
-    /* GALERI */
-    .gallery {display:grid; grid-template-columns:repeat(auto-fit,minmax(200px,1fr)); gap:10px;}
-    .gallery img {width:100%; border-radius:10px; box-shadow:0 2px 6px rgba(0,0,0,0.1);}
-
-    /* FORM */
-    .form label {display:block; margin:10px 0;}
-    .form input, .form textarea {width:100%; padding:8px; border:1px solid #ccc; border-radius:6px; margin-top:4px;}
-    .checkbox-group {display:grid; grid-template-columns:repeat(auto-fit,minmax(150px,1fr)); gap:5px; margin-top:5px;}
-    .required {color:red;}
-
-    /* CONTACT */
-    .contact-grid {display:grid; gap:20px; grid-template-columns:repeat(auto-fit,minmax(250px,1fr));}
-
-    /* FOOTER */
-    .site-footer {background:#0a8547; color:#fff; text-align:center; padding:20px;}
-    .note, .small {font-size:14px; color:#666;}
-
-    /* LOGO */
-    .logo {width:120px; height:auto; display:block; margin-bottom:10px;}
-  </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>LSM Rakyat Menanti Keadilan</title>
+  <!-- Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <!-- CSS Eksternal -->
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header class="site-header">
-    <div class="wrap header-inner">
-      <div class="branding">
-        <!-- LOGO DISINI -->
-        <img src="logo.png" alt="Logo RMK" class="logo">
-        <h1>LSM RAKYAT MENANTI KEADILAN</h1>
-        <p class="motto">"MENGABDI SEPENUH WAKTU MEMAHAMI PERBEDAAN"</p>
-      </div>
-      <nav class="main-nav">
-        <a href="#home">Beranda</a>
-        <a href="#tentang">Tentang</a>
-        <a href="#program">Program</a>
-        <a href="#anggota">Anggota</a>
-        <a href="#galeri">Galeri</a>
-        <a href="#berita">Berita</a>
-        <a href="#donasi">Donasi</a>
-        <a href="#relawan">Relawan</a>
-        <a href="#kontak">Kontak</a>
-      </nav>
-    </div>
+  <!-- HEADER -->
+  <header>
+    <img src="logo.png" alt="Logo LSM" class="logo">
+    <h1>LSM RAKYAT MENANTI KEADILAN</h1>
+    <p class="slogan">“Mengabdi Sepenuh Waktu Memahami Perbedaan”</p>
+    <nav>
+      <ul>
+        <li><a href="#tentang">Tentang Kami</a></li>
+        <li><a href="#visi">Visi & Misi</a></li>
+        <li><a href="#program">Program</a></li>
+        <li><a href="#struktur">Struktur</a></li>
+        <li><a href="keanggotaan.html">Keanggotaan</a></li>
+        <li><a href="#galeri">Galeri</a></li>
+        <li><a href="#berita">Berita</a></li>
+        <li><a href="#donasi">Donasi</a></li>
+        <li><a href="#relawan">Relawan</a></li>
+        <li><a href="#kontak">Kontak</a></li>
+      </ul>
+    </nav>
   </header>
 
-  <!-- HERO -->
-  <section id="home" class="hero">
-    <div class="wrap">
-      <h2>Menjembatani serta Mendampingi Masyarakat dan Stakeholder</h2>
-      <p class="lead">Bergerak untuk kesejahteraan bersama yang adil berdasarkan hukum dan HAM.</p>
-      <div class="cta">
-        <a href="#donasi" class="btn">Donasi Sekarang</a>
-        <a href="#relawan" class="btn btn-outline">Gabung Relawan</a>
-      </div>
-    </div>
+  <!-- TENTANG KAMI -->
+  <section id="tentang">
+    <h2>Tentang Kami</h2>
+    <p>LSM Rakyat Menanti Keadilan merupakan Organisasi Nirlaba yang berdiri di Kota Pontianak, Kalimantan Barat. 
+       Lahir dengan kesadaran pentingnya nilai Keadilan berdasarkan Pancasila butir ke-5, yaitu “Keadilan bagi seluruh rakyat Indonesia” 
+       yang seharusnya bersifat aktif, bukan pasif.</p>
+    <p>
+       Nama Lengkap: LSM Rakyat Menanti Keadilan (RMK)<br>
+       Akta Notaris/Badan Hukum: No.06 Tanggal 05 April 2011<br>
+       Nomor SKT: 00-220-00/284/bkbpb/2016<br>
+       Alamat: Jl. Tekam, Komp. Griya Pratama Blok I no.5, Pontianak
+    </p>
+    <a href="#visi" class="btn">Selengkapnya</a>
   </section>
 
-  <!-- TENTANG -->
-  <section id="tentang" class="section">
-    <div class="wrap">
-      <h2>Tentang LSM RAKYAT MENANTI KEADILAN (RMK)</h2>
-      <div class="card">
-        <p><strong>LSM RAKYAT MENANTI KEADILAN</strong> (disingkat LSM "RMK") adalah organisasi nirlaba yang berdiri di Kota Pontianak, Kalimantan Barat. Organisasi ini lahir atas kesadaran pentingnya nilai keadilan berdasarkan Pancasila butir ke-5 — Keadilan bagi seluruh rakyat Indonesia — yang bersifat aktif dan tidak pasif. RMK bekerja menjembatani dan mendampingi masyarakat serta stakeholder untuk mewujudkan kesejahteraan yang adil dan berbasis hukum dan HAM.</p>
-
-        <h3>Identitas Singkat</h3>
-        <ul>
-          <li>Nama Lengkap: LSM RAKYAT MENANTI KEADILAN</li>
-          <li>Singkatan: LSM "RMK"</li>
-          <li>Akta Notaris / Badan Hukum: No.06 Tanggal 05 April 2011</li>
-          <li>Nomor SKT: 00-220-00/284/bkbpb/2016</li>
-          <li>Alamat: Jl. Tekam, Komp. Griya Pratama Blok i no.5, Pontianak</li>
-        </ul>
-
-        <h3>Visi</h3>
-        <p>Turut mewujudkan cita-cita bangsa — masyarakat yang adil dan makmur berdasarkan Pancasila.</p>
-
-        <h3>Misi</h3>
-        <ol>
-          <li>Menjadi kontrol sosial terhadap perkembangan daerah dan pemberdayaan masyarakat di bidang lingkungan, pertanian, pendidikan, sosial, hukum, dan HAM.</li>
-          <li>Mengembangkan dan membina azas persaudaraan/kebersamaan serta semangat persatuan dan kesatuan bangsa.</li>
-          <li>Memelihara hubungan antar golongan tanpa memandang suku, agama, dan ras.</li>
-          <li>Mengembangkan potensi masyarakat agar aktif berkontribusi dalam pembangunan nasional.</li>
-          <li>Membentuk klinik konsultasi dan pendampingan masyarakat di bidang lingkungan hidup, pertanian, perkebunan, pendidikan, sosial, dan HAM.</li>
-        </ol>
-      </div>
-    </div>
+  <!-- VISI MISI -->
+  <section id="visi">
+    <h2>Visi & Misi</h2>
+    <h3>Visi</h3>
+    <p>Turut Mewujudkan cita-cita bangsa negara, yaitu masyarakat yang adil dan makmur berdasarkan Pancasila.</p>
+    <h3>Misi</h3>
+    <ol>
+      <li>Sebagai kontrol sosial terhadap perkembangan daerah pemberdayaan masyarakat dalam bidang lingkungan, pertanian, pendidikan, sosial, hukum, dan HAM.</li>
+      <li>Mengembangkan dan membina azas persaudaraan, meningkatkan semangat persatuan dan kesatuan bangsa.</li>
+      <li>Memelihara dan meningkatkan hubungan antar semua golongan dalam masyarakat tanpa memandang suku, agama, dan ras.</li>
+      <li>Mengembangkan potensi masyarakat untuk ikut aktif dalam pembangunan nasional.</li>
+      <li>Memelihara rasa persaudaraan dan kesatuan secara kekeluargaan, serta memupuk tanggung jawab dan daya cipta yang dinamis.</li>
+    </ol>
   </section>
 
   <!-- PROGRAM -->
-  <section id="program" class="section alt">
-    <div class="wrap">
-      <h2>Program Utama RMK</h2>
-      <div class="grid-3">
-        <div class="card"><h3>1. Pemberdayaan Masyarakat</h3><p>Pelatihan, pendampingan usaha, dan pembentukan kelompok usaha.</p></div>
-        <div class="card"><h3>2. Program Sosial & Kesenjangan</h3><p>Mempersempit kesenjangan sosial melalui kerja sama.</p></div>
-        <div class="card"><h3>3. Kerjasama & Jejaring</h3><p>Membangun jejaring dengan instansi pemerintah dan swasta.</p></div>
-        <div class="card"><h3>4. Dukungan Kebijakan Publik</h3><p>Mendukung pembangunan nasional serta menjadi pengawas sosial.</p></div>
-        <div class="card"><h3>5. Klinik Konsultasi & Pendampingan</h3><p>Konsultasi dan pendampingan di bidang lingkungan, hukum, dan HAM.</p></div>
-      </div>
-    </div>
+  <section id="program">
+    <h2>Program Utama</h2>
+    <ul>
+      <li>Memberdayakan masyarakat sehingga dapat menjadi potensi Nasional.</li>
+      <li>Melakukan usaha-usaha sosial kemasyarakatan untuk memperkecil kesenjangan sosial.</li>
+      <li>Mengadakan kerjasama dengan instansi Pemerintah, Swasta, serta badan sosial lainnya.</li>
+      <li>Mendukung segala Program Pemerintah dalam pembangunan nasional.</li>
+      <li>Membentuk klinik konsultasi serta pendamping masyarakat di bidang lingkungan hidup, pertanian, pendidikan, sosial, dan HAM.</li>
+    </ul>
   </section>
 
-  <!-- ANGGOTA -->
-  <section id="anggota" class="section">
-    <div class="wrap">
-      <h2>Pengurus Inti & Data Anggota</h2>
-      <h3>Pengurus Inti</h3>
-      <div class="grid-4">
-        <div class="member card"><img src="img/pengurus1.jpg" alt="Parulian Siagian"><h4>Parulian Siagian</h4><p class="role">Ketua Umum</p></div>
-        <div class="member card"><img src="img/pengurus2.jpg" alt="Peres Nikolas Siagian"><h4>Peres Nikolas Siagian</h4><p class="role">Ketua Bidang Organisasi</p></div>
-        <div class="member card"><img src="img/pengurus3.jpg" alt="Aida Riama"><h4>Aida Riama</h4><p class="role">Sekretaris Umum</p></div>
-        <div class="member card"><img src="img/pengurus4.jpg" alt="Mauli Simatupang"><h4>Mauli Simatupang</h4><p class="role">Bendahara Umum</p></div>
-      </div>
-
-      <h3>Tabel Anggota (Publik - contoh)</h3>
-      <div class="card">
-        <table class="members-table">
-          <thead><tr><th>No</th><th>Nama</th><th>Jabatan</th><th>Email</th><th>No. HP</th></tr></thead>
-          <tbody>
-            <tr><td>1</td><td>Parulian Siagian</td><td>Ketua Umum</td><td>—</td><td>—</td></tr>
-            <tr><td>2</td><td>Peres Nikolas Siagian</td><td>Ketua Bidang Organisasi</td><td>—</td><td>—</td></tr>
-            <tr><td>3</td><td>Aida Riama</td><td>Sekretaris Umum</td><td>—</td><td>—</td></tr>
-            <tr><td>4</td><td>Ervina</td><td>Sekretaris 1</td><td>—</td><td>—</td></tr>
-            <tr><td>5</td><td>Mauli Simatupang</td><td>Bendahara Umum</td><td>—</td><td>—</td></tr>
-          </tbody>
-        </table>
-        <p class="note">Catatan: Untuk data anggota lengkap gunakan halaman verifikasi QR khusus.</p>
-      </div>
-    </div>
+  <!-- STRUKTUR -->
+  <section id="struktur">
+    <h2>Struktur Organisasi</h2>
+    <ul>
+      <li>Ketua Umum: Parulian Siagian</li>
+      <li>Bendahara Umum: Mauli Simatupang</li>
+      <li>Sekretaris Umum: Aida Riama</li>
+      <li>Ketua Bidang Organisasi: Peres Nikolas Siagian</li>
+      <li>Sekretaris 1: Ervina</li>
+    </ul>
   </section>
 
   <!-- GALERI -->
-  <section id="galeri" class="section alt">
-    <div class="wrap">
-      <h2>Galeri Kegiatan</h2>
-      <div class="gallery">
-        <img src="img/galeri1.jpg" alt="Kegiatan 1">
-        <img src="img/galeri2.jpg" alt="Kegiatan 2">
-        <img src="img/galeri3.jpg" alt="Kegiatan 3">
-        <img src="img/galeri4.jpg" alt="Kegiatan 4">
-      </div>
-    </div>
+  <section id="galeri">
+    <h2>Galeri</h2>
+    <p>(Foto kegiatan akan ditampilkan di sini)</p>
   </section>
 
   <!-- BERITA -->
-  <section id="berita" class="section">
-    <div class="wrap">
-      <h2>Berita & Artikel</h2>
-      <article class="card news-item"><h3>Meninjau Pembangunan Jalan di Kalbar</h3><p>RMK melakukan kunjungan lapangan untuk meninjau proyek pengerjaan jalan.</p><p class="meta">Tanggal: 15 Juli 2025</p></article>
-      <article class="card news-item"><h3>Klinik Konsultasi Hukum & HAM</h3><p>RMK membuka klinik konsultasi untuk membantu masyarakat memahami hak-hak mereka.</p><p class="meta">Tanggal: 2 Agustus 2025</p></article>
-    </div>
+  <section id="berita">
+    <h2>Berita & Artikel</h2>
+    <article>
+      <h3>Meninjau Pembangunan Jalan di Wilayah Kalbar</h3>
+      <p>LSM RMK turut serta dalam meninjau pembangunan jalan yang menjadi isu penting di masyarakat Kalimantan Barat.</p>
+    </article>
   </section>
 
   <!-- DONASI -->
-  <section id="donasi" class="section alt">
-    <div class="wrap">
-      <h2>Donasi untuk RMK</h2>
-      <div class="card">
-        <p>Terima kasih atas dukungan Anda. Semua donasi digunakan untuk program pemberdayaan masyarakat, klinik pendampingan, dan operasional lapangan.</p>
-        <h3>Informasi Rekening</h3>
-        <p><strong>Bank:</strong> (Isi nama bank)</p>
-        <p><strong>No. Rekening:</strong> 7115 0100 9150 531</p>
-        <p><strong>Atas Nama:</strong> Parulian Siagian</p>
-        <h3>Konfirmasi Donasi</h3>
-        <form id="donasiForm" class="form">
-          <label>Nama Donatur <span class="required">*</span><input type="text" name="donor_name" required></label>
-          <label>Email <input type="email" name="donor_email"></label>
-          <label>Nominal Donasi (Rp) <input type="number" name="amount" required></label>
-          <label>Bukti Transfer <input type="text" name="proof"></label>
-          <label>Keterangan <textarea name="note" rows="3"></textarea></label>
-          <button type="submit" class="btn">Kirim Konfirmasi</button>
-        </form>
-      </div>
-    </div>
+  <section id="donasi">
+    <h2>Donasi</h2>
+    <p>Rekening Donasi: <strong>7115 0100 9150 531</strong> a/n Parulian Siagian</p>
+    <p>(QRIS bisa ditambahkan di sini)</p>
   </section>
 
   <!-- RELAWAN -->
-  <section id="relawan" class="section">
-    <div class="wrap">
-      <h2>Form Pendaftaran Relawan</h2>
-      <div class="card">
-        <form id="relawanForm" class="form">
-          <label>Nama Lengkap <span class="required">*</span><input type="text" name="name" required></label>
-          <label>Email Aktif <span class="required">*</span><input type="email" name="email" required></label>
-          <label>Nomor Telepon / WhatsApp <span class="required">*</span><input type="text" name="phone" required></label>
-          <label>Alamat Lengkap <span class="required">*</span><textarea name="address" rows="3" required></textarea></label>
-          <label>Bidang Minat Relawan <span class="required">*</span>
-            <div class="checkbox-group">
-              <label><input type="checkbox" name="interest" value="Lingkungan"> Lingkungan</label>
-              <label><input type="checkbox" name="interest" value="Pertanian"> Pertanian</label>
-              <label><input type="checkbox" name="interest" value="Pendidikan"> Pendidikan</label>
-              <label><input type="checkbox" name="interest" value="Sosial"> Sosial</label>
-              <label><input type="checkbox" name="interest" value="Hukum"> Hukum</label>
-              <label><input type="checkbox" name="interest" value="HAM"> HAM</label>
-            </div>
-          </label>
-          <label>Pengalaman / Keterampilan <textarea name="skills" rows="3"></textarea></label>
-          <label>Alasan Ingin Bergabung <textarea name="motivation" rows="3" required></textarea></label>
-          <button type="submit" class="btn">Daftar Jadi Relawan</button>
-        </form>
-      </div>
-    </div>
+  <section id="relawan">
+    <h2>Form Pendaftaran Relawan</h2>
+    <form>
+      <label>Nama Lengkap*</label><br>
+      <input type="text" required><br>
+      <label>Email Aktif*</label><br>
+      <input type="email" required><br>
+      <label>Nomor Telepon / WhatsApp*</label><br>
+      <input type="tel" required><br>
+      <label>Alamat Lengkap*</label><br>
+      <textarea required></textarea><br>
+      <label>Bidang Minat Relawan*</label><br>
+      <select required>
+        <option>Lingkungan</option>
+        <option>Pertanian</option>
+        <option>Pendidikan</option>
+        <option>Sosial</option>
+        <option>Hukum</option>
+        <option>HAM</option>
+      </select><br>
+      <label>Pengalaman / Keterampilan</label><br>
+      <textarea></textarea><br>
+      <label>Alasan Ingin Bergabung*</label><br>
+      <textarea required></textarea><br>
+      <button type="submit">Kirim</button>
+    </form>
   </section>
 
   <!-- KONTAK -->
-  <section id="kontak" class="section alt">
-    <div class="wrap">
-      <h2>Kontak & Media Sosial</h2>
-      <div class="card contact-grid">
-        <div>
-          <h3>Alamat</h3><p>Jl. Tekam Komp. Griya Pratama Blok i no.5, Pontianak</p>
-          <h3>Telepon / WhatsApp</h3><p>082166039732</p>
-          <h3>Email</h3><p><a href="mailto:lsmrakyatmenantikeadilan@gmail.com">lsmrakyatmenantikeadilan@gmail.com</a></p>
-        </div>
-        <div>
-          <h3>Media Sosial</h3>
-          <p>Instagram: <a href="https://instagram.com/LSMRMKKALBAR" target="_blank">@LSMRMKKALBAR</a></p>
-          <p>Facebook / Twitter / YouTube: diari rmk </p>
-          <h3>Jam Operasional</h3><p>Senin–Jumat:08.00-17.00
-        </div>
-      </div>
-    </div>
+  <section id="kontak">
+    <h2>Kontak</h2>
+    <p>
+      Email: lsmrakyatmenantikeadilan@gmail.com<br>
+      Telepon/WhatsApp: 082166039732<br>
+      Alamat: Jl. Tekam Komp. Griya Pratama Blok I no.5, Pontianak<br>
+      Instagram: <a href="https://instagram.com/lsmrmkkalbar" target="_blank">@LSMRMKKALBAR</a>
+    </p>
   </section>
 
   <!-- FOOTER -->
-  <footer class="site-footer">
-    <div class="wrap">
-      <p>&copy; 2025 LSM Rakyat Menanti Keadilan</p>
-      <p class="small">Mengabdi Sepenuh Waktu Memahami Perbedaan</p>
-    </div>
-Baik, aku kasih yang **FULL index.html** ya, tanpa mengubah isi yang sudah kamu punya. Jadi aku hanya pastikan logonya (`logo.png`)
+  <footer>
+    <p>&copy; 2025 LSM Rakyat Menanti Keadilan. All Rights Reserved.</p>
+  </footer>
+</body>
+</html>
