--- a/index.html
+++ b/index.html
@@ -4,152 +4,169 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>LSM Rakyat Menanti Keadilan</title>
-  <!-- Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-  <!-- CSS Eksternal -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- HEADER -->
+  <!-- Header -->
   <header>
-    <img src="logo.png" alt="Logo LSM" class="logo">
-    <h1>LSM RAKYAT MENANTI KEADILAN</h1>
-    <p class="slogan">“Mengabdi Sepenuh Waktu Memahami Perbedaan”</p>
+    <div class="header-top">
+      <img src="logo.png" alt="Logo LSM" class="logo-big">
+      <h1>LSM Rakyat Menanti Keadilan</h1>
+      <p class="slogan">✨ Mengabdi Sepenuh Waktu Memahami Perbedaan ✨</p>
+    </div>
     <nav>
-      <ul>
-        <li><a href="#tentang">Tentang Kami</a></li>
-        <li><a href="#visi">Visi & Misi</a></li>
-        <li><a href="#program">Program</a></li>
-        <li><a href="#struktur">Struktur</a></li>
-        <li><a href="keanggotaan.html">Keanggotaan</a></li>
-        <li><a href="#galeri">Galeri</a></li>
-        <li><a href="#berita">Berita</a></li>
-        <li><a href="#donasi">Donasi</a></li>
-        <li><a href="#relawan">Relawan</a></li>
-        <li><a href="#kontak">Kontak</a></li>
-      </ul>
+      <a href="#tentang">Tentang Kami</a>
+      <a href="#visi-misi">Visi & Misi</a>
+      <a href="#struktur">Struktur</a>
+      <a href="#program">Program</a>
+      <a href="#anggota">Anggota</a>
+      <a href="#galeri">Galeri</a>
+      <a href="#berita">Berita</a>
+      <a href="#donasi">Donasi</a>
+      <a href="#relawan">Relawan</a>
+      <a href="#kontak">Kontak</a>
     </nav>
   </header>
 
-  <!-- TENTANG KAMI -->
-  <section id="tentang">
-    <h2>Tentang Kami</h2>
-    <p>LSM Rakyat Menanti Keadilan merupakan Organisasi Nirlaba yang berdiri di Kota Pontianak, Kalimantan Barat. 
-       Lahir dengan kesadaran pentingnya nilai Keadilan berdasarkan Pancasila butir ke-5, yaitu “Keadilan bagi seluruh rakyat Indonesia” 
-       yang seharusnya bersifat aktif, bukan pasif.</p>
-    <p>
-       Nama Lengkap: LSM Rakyat Menanti Keadilan (RMK)<br>
-       Akta Notaris/Badan Hukum: No.06 Tanggal 05 April 2011<br>
-       Nomor SKT: 00-220-00/284/bkbpb/2016<br>
-       Alamat: Jl. Tekam, Komp. Griya Pratama Blok I no.5, Pontianak
-    </p>
-    <a href="#visi" class="btn">Selengkapnya</a>
-  </section>
+  <main>
+    <!-- Tentang Kami -->
+    <section id="tentang" class="card">
+      <h2>Tentang Kami</h2>
+      <p>
+        LSM Rakyat Menanti Keadilan (RMK) merupakan Organisasi Nirlaba yang berdiri di Kota Pontianak, Kalimantan Barat, 
+        lahir dengan kesadaran pentingnya nilai Keadilan berdasarkan Pancasila butir ke-5: 
+        <strong>Keadilan bagi seluruh rakyat Indonesia</strong>, yang seharusnya bersifat aktif bukan pasif.
+      </p>
+      <p>
+        RMK berperan dalam menjembatani serta mendampingi masyarakat dan stakeholder guna kesejahteraan bersama 
+        yang adil berdasarkan hukum dan HAM.
+      </p>
+    </section>
 
-  <!-- VISI MISI -->
-  <section id="visi">
-    <h2>Visi & Misi</h2>
-    <h3>Visi</h3>
-    <p>Turut Mewujudkan cita-cita bangsa negara, yaitu masyarakat yang adil dan makmur berdasarkan Pancasila.</p>
-    <h3>Misi</h3>
-    <ol>
-      <li>Sebagai kontrol sosial terhadap perkembangan daerah pemberdayaan masyarakat dalam bidang lingkungan, pertanian, pendidikan, sosial, hukum, dan HAM.</li>
-      <li>Mengembangkan dan membina azas persaudaraan, meningkatkan semangat persatuan dan kesatuan bangsa.</li>
-      <li>Memelihara dan meningkatkan hubungan antar semua golongan dalam masyarakat tanpa memandang suku, agama, dan ras.</li>
-      <li>Mengembangkan potensi masyarakat untuk ikut aktif dalam pembangunan nasional.</li>
-      <li>Memelihara rasa persaudaraan dan kesatuan secara kekeluargaan, serta memupuk tanggung jawab dan daya cipta yang dinamis.</li>
-    </ol>
-  </section>
+    <!-- Visi & Misi -->
+    <section id="visi-misi" class="card">
+      <h2>Visi & Misi</h2>
+      <ul>
+        <li>Turut mewujudkan cita-cita bangsa negara: masyarakat adil dan makmur berdasarkan Pancasila.</li>
+        <li>Sebagai kontrol sosial dalam bidang lingkungan, pertanian, pendidikan, sosial, hukum, dan HAM.</li>
+        <li>Mengembangkan persaudaraan, meningkatkan semangat persatuan dan kesatuan bangsa.</li>
+        <li>Memelihara hubungan antar golongan tanpa memandang suku, agama, dan ras.</li>
+        <li>Mengembangkan potensi masyarakat agar aktif dalam pembangunan nasional.</li>
+        <li>Memupuk rasa tanggung jawab dan kerja sama dalam pengabdian kepada masyarakat.</li>
+      </ul>
+    </section>
 
-  <!-- PROGRAM -->
-  <section id="program">
-    <h2>Program Utama</h2>
-    <ul>
-      <li>Memberdayakan masyarakat sehingga dapat menjadi potensi Nasional.</li>
-      <li>Melakukan usaha-usaha sosial kemasyarakatan untuk memperkecil kesenjangan sosial.</li>
-      <li>Mengadakan kerjasama dengan instansi Pemerintah, Swasta, serta badan sosial lainnya.</li>
-      <li>Mendukung segala Program Pemerintah dalam pembangunan nasional.</li>
-      <li>Membentuk klinik konsultasi serta pendamping masyarakat di bidang lingkungan hidup, pertanian, pendidikan, sosial, dan HAM.</li>
-    </ul>
-  </section>
+    <!-- Struktur Organisasi -->
+    <section id="struktur" class="card">
+      <h2>Struktur Organisasi</h2>
+      <ul>
+        <li><strong>Ketua Umum:</strong> Parulian Siagian</li>
+        <li><strong>Bendahara Umum:</strong> Mauli Simatupang</li>
+        <li><strong>Sekretaris Umum:</strong> Aida Riama</li>
+        <li><strong>Ketua Bidang Organisasi:</strong> Peres Nikolas Siagian</li>
+        <li><strong>Sekretaris I:</strong> Ervina</li>
+      </ul>
+    </section>
 
-  <!-- STRUKTUR -->
-  <section id="struktur">
-    <h2>Struktur Organisasi</h2>
-    <ul>
-      <li>Ketua Umum: Parulian Siagian</li>
-      <li>Bendahara Umum: Mauli Simatupang</li>
-      <li>Sekretaris Umum: Aida Riama</li>
-      <li>Ketua Bidang Organisasi: Peres Nikolas Siagian</li>
-      <li>Sekretaris 1: Ervina</li>
-    </ul>
-  </section>
+    <!-- Program Utama -->
+    <section id="program" class="card">
+      <h2>Program Kerja</h2>
+      <ol>
+        <li>Memberdayakan masyarakat agar menjadi potensi nasional.</li>
+        <li>Melaksanakan usaha sosial kemasyarakatan untuk memperkecil kesenjangan sosial.</li>
+        <li>Bekerjasama dengan instansi pemerintah, swasta, serta badan sosial lainnya.</li>
+        <li>Mendukung program pemerintah dalam pembangunan dan menjadi lembaga sosial kontrol.</li>
+        <li>Membentuk klinik konsultasi dan pendampingan masyarakat di bidang lingkungan, pertanian, perkebunan, pendidikan, sosial, dan HAM.</li>
+      </ol>
+    </section>
 
-  <!-- GALERI -->
-  <section id="galeri">
-    <h2>Galeri</h2>
-    <p>(Foto kegiatan akan ditampilkan di sini)</p>
-  </section>
+    <!-- Anggota -->
+    <section id="anggota" class="card">
+      <h2>Anggota Inti</h2>
+      <table>
+        <tr><th>Nama</th><th>Jabatan</th></tr>
+        <tr><td>Parulian Siagian</td><td>Ketua Umum</td></tr>
+        <tr><td>Mauli Simatupang</td><td>Bendahara Umum</td></tr>
+        <tr><td>Aida Riama</td><td>Sekretaris Umum</td></tr>
+        <tr><td>Peres Nikolas Siagian</td><td>Ketua Bidang Organisasi</td></tr>
+        <tr><td>Ervina</td><td>Sekretaris I</td></tr>
+      </table>
+      <p><a href="keanggotaan.html" class="btn">🔎 Verifikasi Keanggotaan</a></p>
+    </section>
 
-  <!-- BERITA -->
-  <section id="berita">
-    <h2>Berita & Artikel</h2>
-    <article>
-      <h3>Meninjau Pembangunan Jalan di Wilayah Kalbar</h3>
-      <p>LSM RMK turut serta dalam meninjau pembangunan jalan yang menjadi isu penting di masyarakat Kalimantan Barat.</p>
-    </article>
-  </section>
+    <!-- Galeri -->
+    <section id="galeri" class="card">
+      <h2>Galeri</h2>
+      <p><em>Foto kegiatan akan ditampilkan di sini.</em></p>
+      <img src="https://via.placeholder.com/400x250?text=Foto+Kegiatan+1" alt="Foto Kegiatan 1">
+    </section>
 
-  <!-- DONASI -->
-  <section id="donasi">
-    <h2>Donasi</h2>
-    <p>Rekening Donasi: <strong>7115 0100 9150 531</strong> a/n Parulian Siagian</p>
-    <p>(QRIS bisa ditambahkan di sini)</p>
-  </section>
+    <!-- Berita -->
+    <section id="berita" class="card">
+      <h2>Berita & Artikel</h2>
+      <article>
+        <h3>Meninjau Pembangunan Jalan di Kalbar</h3>
+        <p>LSM RMK turut hadir meninjau pembangunan jalan di wilayah Kalimantan Barat yang menjadi isu penting di tengah masyarakat.</p>
+      </article>
+    </section>
 
-  <!-- RELAWAN -->
-  <section id="relawan">
-    <h2>Form Pendaftaran Relawan</h2>
-    <form>
-      <label>Nama Lengkap*</label><br>
-      <input type="text" required><br>
-      <label>Email Aktif*</label><br>
-      <input type="email" required><br>
-      <label>Nomor Telepon / WhatsApp*</label><br>
-      <input type="tel" required><br>
-      <label>Alamat Lengkap*</label><br>
-      <textarea required></textarea><br>
-      <label>Bidang Minat Relawan*</label><br>
-      <select required>
-        <option>Lingkungan</option>
-        <option>Pertanian</option>
-        <option>Pendidikan</option>
-        <option>Sosial</option>
-        <option>Hukum</option>
-        <option>HAM</option>
-      </select><br>
-      <label>Pengalaman / Keterampilan</label><br>
-      <textarea></textarea><br>
-      <label>Alasan Ingin Bergabung*</label><br>
-      <textarea required></textarea><br>
-      <button type="submit">Kirim</button>
-    </form>
-  </section>
+    <!-- Donasi -->
+    <section id="donasi" class="card">
+      <h2>Donasi</h2>
+      <p>Dukung kegiatan kami melalui donasi ke rekening berikut:</p>
+      <p><strong>7115 0100 9150 531</strong> a/n Parulian Siagian</p>
+      <p>Konfirmasi donasi dapat dikirim melalui email atau WhatsApp.</p>
+    </section>
 
-  <!-- KONTAK -->
-  <section id="kontak">
-    <h2>Kontak</h2>
-    <p>
-      Email: lsmrakyatmenantikeadilan@gmail.com<br>
-      Telepon/WhatsApp: 082166039732<br>
-      Alamat: Jl. Tekam Komp. Griya Pratama Blok I no.5, Pontianak<br>
-      Instagram: <a href="https://instagram.com/lsmrmkkalbar" target="_blank">@LSMRMKKALBAR</a>
-    </p>
-  </section>
+    <!-- Relawan -->
+    <section id="relawan" class="card">
+      <h2>Relawan</h2>
+      <form>
+        <label>Nama Lengkap*</label><br>
+        <input type="text" required><br><br>
 
-  <!-- FOOTER -->
+        <label>Email*</label><br>
+        <input type="email" required><br><br>
+
+        <label>Nomor Telepon / WhatsApp*</label><br>
+        <input type="text" required><br><br>
+
+        <label>Alamat Lengkap*</label><br>
+        <textarea required></textarea><br><br>
+
+        <label>Bidang Minat Relawan*</label><br>
+        <select required>
+          <option>Lingkungan</option>
+          <option>Pertanian</option>
+          <option>Pendidikan</option>
+          <option>Sosial</option>
+          <option>Hukum</option>
+          <option>HAM</option>
+        </select><br><br>
+
+        <label>Pengalaman / Keterampilan</label><br>
+        <textarea></textarea><br><br>
+
+        <label>Alasan Bergabung*</label><br>
+        <textarea required></textarea><br><br>
+
+        <button type="submit" class="btn">Daftar Relawan</button>
+      </form>
+    </section>
+
+    <!-- Kontak -->
+    <section id="kontak" class="card">
+      <h2>Kontak</h2>
+      <p>Email: <a href="mailto:lsmrakyatmenantikeadilan@gmail.com">lsmrakyatmenantikeadilan@gmail.com</a></p>
+      <p>Telepon/WA: 082166039732</p>
+      <p>Alamat: Jl. Tekam, Komp. Griya Pratama Blok i no.5, Pontianak</p>
+      <p>Instagram: <a href="https://instagram.com/LSMRMKKALBAR" target="_blank">@LSMRMKKALBAR</a></p>
+    </section>
+  </main>
+
+  <!-- Footer -->
   <footer>
-    <p>&copy; 2025 LSM Rakyat Menanti Keadilan. All Rights Reserved.</p>
+    <p>&copy; 2025 LSM Rakyat Menanti Keadilan. Semua Hak Dilindungi.</p>
   </footer>
 </body>
 </html>
